lab1/Test/L1-A-12-99.output
Error Type A at Line 3
Error Type A at Line 13
Error Type A at Line 24
Error Type B at Line 40
Error Type B at Line 42
Error Type B at Line 49
