lab1/Test/L1-A-12-99.cmm
int U214NWr1 ( ) {
  float K1zLRm_yatEaiiaf [ 993547007 ] ;
:}
struct P byJUqYMK1ym 
;
int ;
int ;
struct {
  int Sdiozo5 , UlYylG1vrXE = AutG = KzCRF2iaTGlY7j 
    && wby > hflihs8xPrmDlo * - ! - EqwLm50LVsbTmnls [ 
    wWAyGYbgeeA9jzGvbkj1 || rPlKsImMvO59WJ < S7kPkpc9m 
    - C473f6OeHP ( rv_LLIep3Frm , u8QC - g ( Z <= lvRMspoHQMSLSIXEWp 
    [ GW7F3iDNfDB7Dnuk && DslCvbXVX1 != - ! ( #yXMVsGJ6ye 
    = q_E6uN && enySeAQCV1K == ( u9pIFrfhF71xXm >= lUcrCcB 
    ) ) ] - trI8lmW7fwj6aI / 894301477 ) ) / ! NOTULl65p 
    ( ) . KgRTZn ] + 76890661.1433627510 ;
};
struct pxSRVJycqEXErMH {
};
int ;
int jmveTCQRr9YrH , dZ33 

;
int KLD_2W0YPY3GQVAkS ( int rdJFKW6Tvh0x3s6xD %) {
  return mrgWE2g5xsbM ;
  if ( sTB6DbGjTJGmOX )   yogKQ5cz4ZqfEOOEgz ;

}
int ;
int ;
int ADynaRgptxuCAVqSjS ( ) {
}
int ;
int gJqRPi0AwyqCFzqm22u ( ) {
  if ( jH2ijjZRGPi5rfi6YY )   SnEVvsxXu_Mjs9jPMG ;
else   M ;

}
int 
int _XBbR41 ( ) {
  if ( CuAFm )   fX7c 
else {
    while ( lnJP )     QLkma ;

  }
}
int PxfNJra ( ) {
  DyTvFsZ9 ;
  ;
  if ( G78GLFm_D )   ikBp30rMG_21cQja ;
else   if ( ds8lyiLkdYu )   WKCMjAbG ;


  RkOROthLU1L7Ru0Fe8l ;
}
int y5DDNzEyFW_AC0CY ( int HwF0n42ne9_yPKKQO , int 
  yIuhx ) {
}
